--- a/css.css
+++ b/css.css
@@ -87,6 +87,22 @@
          margin-left:-2em;
     }
   }
+  @media only screen and (max-width:1000px){
+    .himg{
+      width:95px;
+      height: 50px;
+    }
+    .neighbour-name{
+      font-size: 1.8rem;
+    }
+    .province-text{
+      font-size: 1.8rem;
+    }
+    .text-f-6{
+      font-size: 1rem !important;
+      font-weight: 500 !important;
+    }
+  }
 
 
   /*overview card */
@@ -202,6 +218,12 @@
     margin-left:3em;
     margin-top:-2.5em
   }
+  @media only screen and (max-width:992px){
+    .year{
+      width:40% !important;
+    }
+  }
+
 
  
 
@@ -237,6 +259,74 @@
       border-bottom: 4px solid var(--color-persian-green);
       padding-bottom: 0.7rem;
     }
+    @media only screen and (max-width:1094px){
+      
+      .dheading{
+        font-size:.95rem !important;
+      }
+    }
+    @media only screen and (max-width:1067px){
+      
+      .dheading{
+        margin-left: -.8em;
+      
+      }
+      .dem{
+        margin-left: -.8em;
+      }
+    }
+    @media only screen and (max-width:1040px){
+      
+      .meth{
+           width:35% !important;
+           padding-right: none;
+      }
+    }
+    @media only screen and (max-width:1015px){
+      
+      .meth{
+           width:38% !important;
+           padding-right: none;
+      }
+      .lan{
+        margin-left:-1em !important;
+      }
+    }
+    @media only screen and (max-width:1000px){
+      .dheading{
+        font-size: .85rem !important;
+      }
+      .maintext{
+        font-size:1.8rem !important
+      }
+    }
+
+    @media only screen and (max-width:928px){
+      .deimg{
+        width:15%;
+      }
+      .mainText{
+        font-size: 160% !important;
+      }
+      .subtext{
+        font-size: 160% !important;
+      }
+      .dhimg{
+        height:35px !important;
+      }
+      .dhpe{
+        height: 18px !important;
+      }
+      .doimg{
+        height:32px !important;
+      }
+      .maintext{
+        font-size: 1.6rem !important;
+      }
+    }
+
+
+   
    
 
   /*seconddemographics*/
@@ -272,6 +362,42 @@
      }
       
     }
+    @media only screen and (max-width:1112px){
+      
+     .avg{
+      
+       width:19% !important;
+     }
+     .border-right{
+       padding-right:-8rem !important;
+     }
+     .meth{
+         width:24%;
+     }
+    
+       
+    }
+    @media only screen and (max-width:1000px){
+      .sdheading{
+        font-size:.8rem!important
+      }
+      .dollar{
+        height:28px;
+      }
+      .border-right{
+        padding-right:.1rem !important;
+      }
+      .lani{
+        padding-left:1.4em  !important;
+      }
+      .lanp{
+        padding-left: 2.7em !important ;
+      }
+
+    }
+
+
+    
 
     /*Healthcare*/
 
@@ -323,6 +449,57 @@
         font-size: 0.6rem;
         color: var(--color-charcoal-light-25);
       }
+      @media only screen and (max-width:1084px){
+      
+        .phar{
+          width:32% !important;
+        }
+        .text-f-5{
+          font-size: .9rem !important;
+        }
+          
+      }
+      @media only screen and (max-width:1084px){
+      .helt{
+        width:95%
+      }
+    }
+    @media only screen and (max-width:1015px){
+      .phar{
+      
+        width:34%
+      }
+      .helt{
+        margin-left: 1em !important;
+        width:97% !important;
+      }
+
+
+    }
+    @media only screen and (max-width:1000px){
+      .heading-text{
+        font-size: 1rem !important;
+      }
+      .htcr{
+        height:25px !important
+      }
+      .address-text{
+        font-size:.7rem !important;
+      }
+      .phar{
+        margin-right:2.2em !important;
+        width:36% !important;
+       
+      }
+      .newpad{
+        padding-right:none;
+        width:100%;
+        border:1px solid;
+      }
+      
+
+
+    }
     
       /*elementaryschool*/
       .ssectionHeader {
@@ -394,6 +571,13 @@
         }
         
       }
+      @media only screen and (max-width:1094px){
+      
+        .cli{
+         width:30% !important
+        }
+         
+       }
 
 
       /*Day care*/
@@ -413,7 +597,7 @@
       /*groceries*/
       .pdfHeight {
         min-height: 10rem !important;
-        min-width: 16rem
+        min-width:16rem
       }
       .border-left-gc {
         border-left: 2px solid var(--color-charcoal-light-75);
@@ -437,6 +621,49 @@
       .color-75{
         color:var(--color-charcoal-light-50)
       }
+      @media only screen and (max-width:1089px){
+      
+        .smain-text{
+          font-size: 1.6rem !important;
+        }
+        .subtext{
+          font-size: 1.6rem !important;
+        }
+        .hheading{
+          font-size:1.6rem;
+        }
+        .mainText{
+          font-size: 1.6rem;
+        }
+         
+       }
+       @media only screen and (max-width:1066px)
+       {
+        .province-text{
+          padding-left: 3rem !important;
+        }
+       }
+       @media only screen and (max-width:1096px)
+       {
+             #donut_single{
+               margin-left:-1rem;
+             }
+       }
+       @media only screen and (max-width:1062px)
+       {
+         
+         .rese{
+            width: 47%!important;
+         }
+         .pdfHeight{
+           min-width:14rem;
+         }
+         
+         
+      }
+
+       
+
      
         
         
