--- a/main.css
+++ b/main.css
@@ -84,30 +84,32 @@
   }
   @media only screen and (max-width:1115px){
     .neighbour-name{
-         margin-left:-2em;
+         margin-left:-2em ;
     }
   }
   @media only screen and (max-width:1000px){
     .himg{
-      width:95px;
-      height: 50px;
+      width:95px !important;
+      height: 50px !important;
     }
     .neighbour-name{
-      font-size: 1.8rem;
+      font-size: 1.8rem !important;
+    
     }
     .province-text{
-      font-size: 1.8rem;
+      font-size: 1.8rem !important;
+      margin-left: .5%;
     }
     .text-f-6{
       font-size: 1rem !important;
       font-weight: 500 !important;
     }
     .heimg{
-      width:56px;
-      height:56px;
+      width:56px !important;
+      height:56px !important;
     }
   }
-  @media only screen and (max-width:920px)
+  @media only screen and (max-width:938px)
   {
     .neighbour-name{
       font-size: 1.6rem !important;
@@ -123,7 +125,7 @@
       height:52px;
     }
   }
-  @media only screen and (max-width:828px)
+  @media only screen and (max-width:870px)
   {
     .himg{
       width:80px;
@@ -144,7 +146,7 @@
     }
 
   }
-  @media only screen and (max-width:745px)
+  @media only screen and (max-width:826px)
   {
     .himg{
       width:70px;
@@ -165,7 +167,7 @@
     }
 
   }
-  @media only screen and (max-width:694px)
+  @media only screen and (max-width:779px)
   {
     
     .neighbour-name{
@@ -177,16 +179,27 @@
     }
    
   }
-  @media only screen and (max-width:674px)
+  @media only screen and (max-width:710px)
   {
     
+    .himg{
+      width:60px;
+      height:35px;
+    }
     .neighbour-name{
-      
-      margin-left: 1em;
+      font-size: 1.3rem !important;
     }
     .province-text{
-     width:30%
+      font-size:1.3rem !important;
     }
+    .text-f-6{
+      font-size: .6rem !important ;
+    }
+    .heimg{
+      width:40px;
+      height:40px;
+    }
+
    
   }
 
@@ -225,12 +238,38 @@
   }
   .box1{
     margin-top: 20px;
+    width:48%;
   }
   .navi{
     padding-top: 15px;
   }
   .walk{
     padding-left:40px;
+  }
+  @media only screen and (max-width:1000px)
+  {
+    .ovcl{
+      width:60% !important;
+      
+    }
+    .ovcle{
+      width:100% !important;
+      margin-left: none;
+    }
+    .ovimg{
+      height:25px !important;
+      width:25px !important;
+    }
+    .ovtxt{
+      font-size:0.7rem !important;
+    }
+    .ovstxt{
+      font-size: 0.8rem !important;
+    }
+    .fa{
+      height: 13px;
+      width:13px;
+    }
   }
     
 
@@ -306,11 +345,7 @@
     margin-left:3em;
     margin-top:-2.5em
   }
-  @media only screen and (max-width:992px){
-    .year{
-      width:40% !important;
-    }
-  }
+ 
 
 
  
@@ -489,7 +524,7 @@
 
     /*Healthcare*/
 
-    .hheading {
+   .hheading {
       font-size: 2.1rem;
       font-weight: 400;
       color:var(--color-charcoal);
@@ -590,7 +625,7 @@
     }
     
       /*elementaryschool*/
-      .ssectionHeader {
+     .ssectionHeader {
         border-bottom: 4px solid var(--color-persian-green);
         padding-bottom: 0.4rem;
         margin-left: 1.3rem;
@@ -669,7 +704,7 @@
 
 
       /*Day care*/
-      .rounded1{
+    /*  .rounded1{
         border-radius: .5rem;
       }
       .dschool-card-height-pdf {
