--- a/main.css
+++ b/main.css
@@ -1080,6 +1080,15 @@
         font-size: 0.6rem;
         color: var(--color-charcoal-light-25);
       }
+      @media only screen and (max-width:1115px){
+          .phar{
+            margin-left:5% !important;
+            
+          }
+          .hlt{
+            margin-left:5% !important;
+          }
+      }
       @media only screen and (max-width:1000px){
           .phar{
             margin-left:5% !important;
@@ -1232,6 +1241,22 @@
       .color-75{
         color:var(--color-charcoal-light-50)
       }
+      @media only screen and (max-width:1107px){
+      
+        .smain-text{
+          font-size: 1.6rem !important;
+        }
+        .subtext{
+          font-size: 1.6rem !important;
+        }
+        .hheading{
+          font-size:1.6rem;
+        }
+        .mainText{
+          font-size: 1.6rem;
+        }
+         
+       }
      
        
       @media only screen and (max-width:1089px){
