--- a/new.css
+++ b/new.css
@@ -57,15 +57,22 @@
 --color-brownish-orange: #c96e23;
 
 }
+.headcolor{
+  color:#264653;
+}
+.sectionHeader {
+  border-bottom: 4px solid var(--color-persian-green);
+  padding-bottom: 0.4rem;
+}
 
 /*header */
 .neighbour-name {
     font-size: 1rem;
     line-height: 1rem;
     font-weight: bold;
-    color:var(--color-persian-green);
+    
     padding-top:2rem;
-    margin-left: 15%;
+    margin-left: 10%;
   }
   .font-circuler-std {
     font-family: 'DM Sans', sans-serif;
@@ -76,14 +83,16 @@
     font-weight:500;
     margin-left: 5%;
     padding-top: 2rem;
+    display: table-cell;
     
   }
   .htext-f-6 {
-    font-size: .7rem;
+    font-size: .8rem;
     font-weight: 600;
   }
   .detail{
-      margin-left:14%
+      margin-left:8%
+
   }
   .himg{
       height:4rem;
@@ -91,8 +100,215 @@
   }
   .heimg{
     margin-top:1rem;
-    padding-right: 0rem;
+    margin-right:-4rem;
+    
+    
+    
+  }
+  .heig{
+    float:right;
+
   }
  
         
-     
+/*overview*/
+.Otext-f-4 {
+  font-size: 0.4rem ;
+} 
+
+.Otext-f-4-5 {
+  font-size: 0.45rem ;
+  font-weight:600;
+}
+
+.otxt{
+  padding-left:.8rem;
+  font-weight: 400
+}
+.fa{
+  font-size: 12px !important;
+  
+}
+.star{
+  padding-left: 10px;
+}
+/*Real */
+.dtext-f-6 {
+  font-size: 1.2rem ;
+  font-weight: 600;
+}
+.color-charcol{
+  color:var(--color-charcoal);
+
+}
+.content {
+  font-size: 0.35rem;
+  color: var(--color-charcoal-light-50);
+}
+.bg-color-persian-green{
+  background-color: var(--color-persian-green);
+}
+.rtext-f-8-6 {
+  font-size: 0.86rem !important;
+}
+.color-charcoal-dark{
+  color:var(--color-charcoal)
+}
+/*sd*/
+.sdheading {
+  font-size: .8rem;
+  font-weight: 500;
+}
+.sdcontent {
+  font-size: 0.6rem;
+  font-weight: 700;
+}
+.sdsubtext {
+  font-size: 0.6rem;
+  color: var(--color-charcoal-light-50);
+}
+.border-right {
+  border-right: 1px solid var(--color-charcoal-light-50);
+  padding-right: 0.6rem !important;
+}
+
+/*demo*/
+.subhead{
+  color:#2a9d8f
+}
+.dheading {
+  font-size: .5rem;
+  color: var(--color-charcoal);
+  font-weight: 500;
+
+}
+
+.maintext {
+  font-size: 1rem;
+  color: #2a9d8f;
+  font-weight: bold;
+  padding-left: .5em;
+}
+.demographics {
+  background-color: var(--color-persian-green-light-75);
+}
+.hth{
+  font-size: 1.05rem;
+  font-weight: 500;
+}
+.hsth{
+  font-size:.8rem;
+  font-weight: 400;
+}
+.heading-text {
+  font-weight: bold;
+  font-size: 1.1rem !important;
+  line-height: 1rem;
+  color: var(--color-charcoal-light-25);
+}
+.distance-text {
+  font-size: 0.6rem;
+  color: var(--color-charcoal-light-25);
+}
+.address-text {
+  font-size: 0.8rem;
+  line-height: 1.1rem;
+  color: var(--color-charcoal-light-25);
+}
+.dot{
+  height: 10px;
+  width: 10px;
+  background-color: #2a9d8f;
+  border-radius: 50%;
+  display: inline-block;
+}
+.dottxt{
+  color:#2a9d8f; font-weight:500;
+}
+
+.stext{
+   color:#264653;
+   font-size: 1.2rem ;
+   font-weight:700
+    
+}
+
+.sstext{
+  color:#5c747e;
+  font-weight:400;
+}
+.border-light-75 {
+  border: 2px solid var(--color-charcoal-light-75);
+  border-radius: 0.5rem;
+}
+.setext-f-6 {
+  font-size: 1.4rem !important;
+  font-weight: 600;
+  color:var(--color-charcoal)
+}.bg-color-persian-green-light-25
+
+{
+  background-color:var(--color-persian-green-light-25);
+  border-radius: .5em;
+}
+
+.border-persian{
+  border: 2px solid;
+  color: var(--color-persian-green);
+
+}
+
+
+/*day care*/
+.dmain-text{
+  font-size: 2rem;
+  font-weight: 400;
+  color:var(--color-charcoal);
+  padding-left:.8rem;
+}
+
+.dsubtext{
+  
+    font-size: 1.6rem;
+    color: var(--color-persian-green);
+  }
+  .dbg-color-charcoal{
+    background-color: var(--color-charcoal);
+  } 
+  
+.bg-color-persian-green-light-50{
+  background-color: #94cec7;
+}
+
+/*groceries*/
+.pdfHeight {
+        min-height: 10rem;
+        min-width:16rem
+      }
+      .border-left-gc {
+        border-left: 2px solid var(--color-charcoal-light-75);
+      }
+      .border-right-gc {
+        border-right: 2px solid var(--color-charcoal-light-75);
+      }
+      .border-top-gc {
+        border-top: 2px solid var(--color-charcoal-light-75);
+      }
+      .border-bottom-gc {
+        border-bottom: 2px solid var(--color-charcoal-light-75);
+      }
+
+      .bg-color-persian-green-light-50{
+        background-color: var(--color-persian-green-light-50);
+      }
+      .gtext-f-4 {
+        font-size: 1.3rem ;
+      }
+      .color-75{
+        color:var(--color-charcoal-light-50)
+      }
+
+    /*health*/
+    .hltbor{
+    border: 2px solid var(--color-charcoal-light-75);
+    }
