--- a/main.css
+++ b/main.css
@@ -21,7 +21,7 @@
 --color-charcoal: #264653;
 --color-charcoal-light-10: #25596d;
 --color-charcoal-light-95: #f4f6f6;
---color-charcoal-light-25: #5c747e;
+--color-charcoal-light-25:;
 --color-charcoal-light-35: #818d92;
 --color-charcoal-light-75: #c9d1d4;
 --color-charcoal-light-85: #dee3e5;
