--- a/new.css
+++ b/new.css
@@ -113,11 +113,11 @@
         
 /*overview*/
 .Otext-f-4 {
-  font-size: 0.7rem ;
+  font-size: 0.8rem ;
 } 
 
 .Otext-f-4-5 {
-  font-size: 0.8rem ;
+  font-size: 1rem ;
   font-weight:600;
 }
 
@@ -126,7 +126,7 @@
   font-weight: 400
 }
 .fa{
-  font-size: 12px !important;
+  font-size: 15px !important;
   
 }
 .star{
@@ -147,7 +147,7 @@
   color: var(--color-charcoal-light-50);
 }
 .bg-color-persian-green{
-  background-color: var(--color-persian-green);
+  background-color:var(--color-persian-green);
 }
 .rtext-f-8-6 {
   font-size: 0.5rem !important;
@@ -169,7 +169,7 @@
 }
 /*sd*/
 .sdheading {
-  font-size: 1rem;
+  font-size: .8rem;
   font-weight: 500;
 }
 .sdcontent {
