--- a/new.css
+++ b/new.css
@@ -66,8 +66,11 @@
 }
 
 /*header */
+.first{
+  padding-left: 7rem;
+}
 .neighbour-name {
-    font-size: 1.2rem;
+    font-size: 1.6rem;
     line-height: 1rem;
     font-weight: bold;
     color:#2a9d8f;
@@ -78,7 +81,7 @@
     font-family: 'DM Sans', sans-serif;
   }
   .province-text {
-    font-size: 1.2rem ;
+    font-size: 1.6rem ;
     line-height: 1rem;
     font-weight:500;
     margin-left: -10%;
@@ -87,11 +90,17 @@
     
   }
   .htext-f-6 {
-    font-size: .8rem;
+    font-size: 1rem;
     font-weight: 600;
+     
+  }
+  .first{
+    padding-top:rem;
   }
   .detail{
-      margin-left:8%
+      
+      padding-left:30%;
+    
 
   }
   .himg{
